--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,13 @@ spring:
   datasource:
       url: jdbc:postgresql://localhost:5432/storage
       username: postgres
-      password: postgres
+      password: somePassword
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL94Dialect
     hibernate:
       ddl-auto: update
 
+logging:
+  config: classpath:logback-spring.xml
+  file:
+    name: logs/logfile.log
