--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   datasource:
       url: jdbc:postgresql://localhost:5432/storage
       username: postgres
-      password: postgres
+      password: somePassword
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL94Dialect
     hibernate:
